--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "axios": "^0.24.0",
+    "framer-motion": "^5.6.0",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "yakuhanjp": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
