--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^5.6.0",
     "lodash": "^4.17.21",
     "next": "12.0.7",
@@ -20,8 +22,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "recoil": "^0.6.1",
+    "recoil-persist": "^4.0.0",
     "swr": "^1.2.1",
-    "yakuhanjp": "^3.4.1"
+    "yakuhanjp": "^3.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
