--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@geoman-io/leaflet-geoman-free": "^2.11.4",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^5.6.0",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5",
     "recoil": "^0.6.1",
     "recoil-persist": "^4.0.0",
+    "rich-markdown-editor": "^11.21.3",
+    "styled-components": "^5.3.5",
     "swr": "^1.2.1",
     "yakuhanjp": "^3.4.1",
     "yup": "^0.32.11"
