--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@geoman-io/leaflet-geoman-free": "^2.11.4",
+    "@turf/turf": "^6.5.0",
+    "@types/react-datepicker": "^4.4.0",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
@@ -22,6 +24,7 @@
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.5",
