--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.6.0",
     "@geoman-io/leaflet-geoman-free": "^2.11.4",
     "@turf/turf": "^6.5.0",
+    "@types/dateformat": "^5.0.0",
     "@types/react-datepicker": "^4.4.0",
     "axios": "^0.24.0",
+    "dateformat": "^5.0.3",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^5.6.0",
