--- a/package.json
+++ b/package.json
@@ -8,41 +8,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@geoman-io/leaflet-geoman-free": "^2.11.4",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@geoman-io/leaflet-geoman-free": "^2.12.0",
     "@turf/turf": "^6.5.0",
     "@types/dateformat": "^5.0.0",
-    "@types/react-datepicker": "^4.4.0",
-    "axios": "^0.24.0",
+    "@types/react-datepicker": "^4.4.1",
+    "axios": "^0.27.2",
     "dateformat": "^5.0.3",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
-    "framer-motion": "^5.6.0",
-    "leaflet": "^1.7.1",
+    "framer-motion": "^6.3.3",
+    "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
-    "next": "12.0.7",
-    "next-auth": "^4.0.6",
-    "react": "17.0.2",
-    "react-datepicker": "^4.7.0",
-    "react-dom": "17.0.2",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "^4.0.0",
     "recoil": "^0.6.1",
-    "recoil-persist": "^4.0.0",
-    "rich-markdown-editor": "^11.21.3",
+    "recoil-persist": "^4.1.0",
     "styled-components": "^5.3.5",
-    "swr": "^1.2.1",
+    "swr": "^1.3.0",
     "yakuhanjp": "^3.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "@types/node": "17.0.34",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
