--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "lavlus_web_app",
+  "name": "remake",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,10 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.0",
-    "@chakra-ui/react": "^2.0.2",
+    "@chakra-ui/react": "^2.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@geoman-io/leaflet-geoman-free": "^2.12.0",
+    "@geoman-io/leaflet-geoman-free": "^2.13.0",
     "@turf/turf": "^6.5.0",
     "@types/dateformat": "^5.0.0",
     "@types/react-datepicker": "^4.4.1",
@@ -29,7 +30,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
-    "recoil": "^0.6.1",
+    "recoil": "^0.7.3-alpha.2",
     "recoil-persist": "^4.1.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
@@ -37,10 +38,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.34",
+    "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
+    "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
   }
