--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@geoman-io/leaflet-geoman-free": "^2.13.0",
     "@turf/turf": "^6.5.0",
     "@types/dateformat": "^5.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/react-datepicker": "^4.4.1",
     "axios": "^0.27.2",
+    "chakra-ui-markdown-renderer": "^4.0.0",
     "dateformat": "^5.0.3",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6.3.3",
+    "intercept-stdout": "^0.1.2",
     "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
     "next": "12.1.6",
@@ -30,8 +34,10 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
+    "react-markdown": "^8.0.3",
     "recoil": "^0.7.3-alpha.2",
     "recoil-persist": "^4.1.0",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "yakuhanjp": "^3.4.1",
