--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@geoman-io/leaflet-geoman-free": "^2.13.1",
+    "@hookform/resolvers": "^2.9.10",
     "@turf/turf": "^6.5.0",
     "@types/file-saver": "^2.0.5",
     "@types/react-datepicker": "^4.8.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
     "react-markdown": "^8.0.3",
