--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.9",
+    "geojson": "^0.5.0",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "next": "^13.0.4",
