--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
-    "react-leaflet": "^4.1.0",
+    "react-leaflet": "^4.2.0",
     "react-markdown": "^8.0.3",
     "recoil": "^0.7.6",
     "remark-gfm": "^3.0.1",
@@ -42,6 +42,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
