--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-birthday-picker": "^1.0.5",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
